feat: write page routing & basic UI

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  background: #0e0a20 url(https://img.megabox.co.kr/static/mb/images/common/bg/bg-origin.png) no-repeat center top;
+  background-size: 100% 740px;
+  color: white;
+}
+
+a {
+  color: white;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: 500;
 }
