feat: create sleep&diary detail page, style: bottom navigation CSS

--- a/src/components/BottomNavigation/BottomNavigation.module.css
+++ b/src/components/BottomNavigation/BottomNavigation.module.css
@@ -19,3 +19,23 @@ ul > a {
   padding: 0;
   color: #999;
 }
+
+li {
+  display: grid;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.home {
+  display: inline-block;
+  font-size: 2.5em;
+}
+
+.write, .chart {
+  font-size: 1.5em;
+}
+
+.list {
+  font-size: 2em;
+}
