feat: create Daily sleep cycle chart by D3, style: delete code for snake case in backend

--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,3 +1,18 @@
 .text-deepPercent {
   fill: white;
 }
+
+.text-duration-hours,
+.text-duration-minutes {
+fill: rgb(88, 230, 255);
+}
+
+.dailyChart {
+  float: right;
+}
+
+.tooltip {
+  float: right;
+  width: 100px;
+  color: #000;
+}
