--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,9 +11,32 @@ body {
 
 a {
   color: white;
+  text-decoration: none;
 }
 
 h1 {
   font-size: 1.9em;
   font-weight: 500;
+}
+
+.button {
+  margin: 1.5em 0;
+  padding-top: .8em;
+  width: 100%;
+  height: 3.5em;
+  border-radius: 0.5em;
+  font-size: 1em;
+  font-weight: 500;
+  text-align: center;
+}
+
+.fill {
+  background-color: #26182E;
+  color: white;
+}
+
+.line {
+  background-color: white;
+  border: 1em solid #26182E;
+  color: #26182E;
 }
