--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -7,12 +7,12 @@
 fill: rgb(88, 230, 255);
 }
 
-.dailyChart {
-  float: right;
-}
-
 .tooltip {
   float: right;
   width: 100px;
-  color: #000;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
 }
