--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -15,19 +15,23 @@
 
 .sleepCard {
   margin: 25px 0 80px 0;
-  padding: .5em;
+  padding: .7em;
   width: 100%;
-  height: 29em;
-  background-color: #FFF569;
+  height: 13em;
+  background-color: #dadada;
   border-radius: .2em;
 }
 
 .sleepTitle {
-  color: #000
+  margin-bottom: 0;
+  color: #510994
 }
 
 .sleepDetail {
-  float: left;
-  margin-left: .5em;
-  color: #000;
+  color: #333;
+}
+
+.detail {
+  margin-left: 1em;
+  color: #7827c3;
 }
