--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -26,7 +26,7 @@
 .sleepItemIcon {
   width: fit-content;
   margin: 1.4em;
-  padding: 0 .5em;
+  padding: .4em .7em;
   background-color: white;
   border: 1px solid #1c8597;
   border-radius: .5em;
@@ -36,11 +36,7 @@
   color: #1c8597;
 }
 
-.sleepData {
-  margin: .2em;
-}
-
-.light {
+.lightSleep {
   display: inline-block;
   margin-right: 2em;
 }
@@ -50,19 +46,19 @@
   padding-top: 2em;
 }
 
-.title {
+.diaryTitle {
   display: inline-block;
   vertical-align: middle;
 }
 
-.score {
+.subTitle {
+  color: rgb(180, 180, 180);
+}
+
+.diaryScore {
   margin-right: 1em;
   float: right;
   color: #1c8597;
-}
-
-.subTitle {
-  color: rgb(180, 180, 180);
 }
 
 .subText {
@@ -76,7 +72,7 @@
  margin: 1.5em 0;
 }
 
-.color {
+.diaryColor {
   float: right;
   margin: 1em;
   width: 4em;
