style: Chart page

--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,3 +1,7 @@
+.title {
+  margin: 30px 18px;
+}
+
 .text-deepPercent {
   fill: white;
 }
@@ -22,4 +26,36 @@ fill: rgb(88, 230, 255);
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
+}
+
+.axis {
+  font-size: 1em;
+}
+
+.term {
+  margin: 10px;
+  text-align: center;
+}
+
+.description {
+  margin: 20px;
+  text-align: center;
+  line-height: 1.6em;
+}
+
+.total {
+  margin-right: 1em;
+  color: rgb(88, 230, 255);
+}
+
+.light {
+  margin-right: 1em;
+  color: white;
+  background-color: #471FB3;
+}
+
+.deep {
+  margin-right: 1em;
+  color: white;
+  background-color: #080850;
 }
