--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,11 +7,10 @@ header h1 {
   position: relative;
   margin: 0 auto;
   padding-top: .8em;
-  width: 120px;
   height: 55px;
   vertical-align: middle;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.5em;
 }
 
 .button-back {
