--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -57,5 +57,5 @@ fill: rgb(88, 230, 255);
 .deep {
   margin-right: 1em;
   color: white;
-  background-color: #080850;
+  background-color: #2222bd;
 }
